<resources>
    <string name="app_name">4 Square</string>
    <string name="not_a_title">Not A Title</string>
    <string name="subtitle">.... --- .... -- ..</string>
    <string name="menu_search_title">Search</string>
    <string name="menu_refresh_title">Refresh</string>
    <string name="menu_filter_title">Filter</string>
    <string name="menu_reset_title">NO</string>
    <string name="error_ok_button">Okay</string>
    <string name="error_copy_button">Copy to clipboard</string>
    <string name="error_done_text">Copied!</string>

    <string name="error_internet_text">No internet =(</string>
    <string name="error_api_quota">Run out of API quota for today.</string>
    <string name="error_permission_text">Location permission required</string>
    <string name="error_gps_text">No GPS =(</string>

    <string name="default_list_title">Places around. Search for more.</string>
    <string name="something_went_wrong">Something\'s wrong…</string>
    <string name="search_list_title">"Results for -%s- "</string>
    <string name="search_list_title_failed">"Search failed."</string>
    <string name="loading">Loading…</string>
    <string name="looading">Loooading…</string>

    <string name="tips_header">Tips</string>
    <string name="sort_header">Sort places</string>
    <string name="fitler_header">Adjust prices</string>
    <string name="relevance">Relevance</string>
    <string name="distance">Distance</string>
    <string name="search_around">Search area:</string>
    <string name="pick_search_area">Set custom location</string>
    <string name="no_tips_message">No one said anything about this place yet.</string>

    <string name="filter_screen_title">Some customizations?</string>
    <string name="location_picker_screen_title">This is Map</string>

    <string name="filter_screen_price1">$</string>
    <string name="filter_screen_price2">$$</string>
    <string name="filter_screen_price3">$$$</string>
    <string name="filter_screen_price4">$$$$</string>

    <string name="image_desc">This is doge</string>
    <string name="grant_location_permissions_button">Grant location permissions</string>
    <string name="proceed_to_places_list">sure thing</string>
    <string name="permission_required_text">Location permission is required. Would you mind?</string>
    <string name="permission_ok_text">Hi!\nReady to explore the city?</string>
    <string name="welcome_text">Hey there!\u0020</string>
    <string name="oh_error">Oh, error.</string>
    <string name="min_search_circle">500m</string>
    <string name="max_search_circle">10km</string>
    <string name="reset_location">Reset to GPS</string>
    <string name="set_location">Pick Custom</string>
    <string name="waiting_for_gps">Waiting for GPS</string>
    <string name="gps_location_filter_fragment">GPS location:\n %s \nArea: %dm</string>
    <string name="custom_location_filter_fragment">Custom location:\n %s \nArea: %dm</string>
    <string name="map_view_fragment_save">Save</string>
    <string name="use_mock_loc">Use mock loc</string>
    <string name="use_anim">Animate intro</string>
</resources>
