<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:title="@string/menu_search_title"
        android:icon="@drawable/ic_search"
        app:iconifiedByDefault="true"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.widget.SearchView" />
    <item
        android:id="@+id/filter"
        android:title="@string/menu_filter_title"
        android:icon="@drawable/ic_filter"
        app:showAsAction="never" />
    <item
        android:id="@+id/refresh"
        android:title="@string/menu_refresh_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/mock_location"
        android:checkable="true"
        android:title="@string/use_mock_loc"
        app:showAsAction="never" />

    <item
        android:id="@+id/animations"
        android:checkable="true"
        android:title="@string/use_anim"
        app:showAsAction="never" />
</menu>